Fix wrapping of .information .content

--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ a {
 .information .content {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 3em;
 }
 
